--- a/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
+++ b/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
@@ -305,41 +305,51 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\builder-2.1.2\builder\xmlbase.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\builder-2.1.2\builder\xmlevents.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\builder-2.1.2\builder\xmlmarkup.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\active_record.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\active_record\missing.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\active_record\store_procs.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\active_record\translation.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\base.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\cache.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\cascade.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\chain.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\cldr.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\fallbacks.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\flatten.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\gettext.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\interpolation_compiler.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\key_value.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\memoize.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\metadata.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\pluralization.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\simple.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\backend\transliterator.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\config.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\core_ext\hash.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\core_ext\string\interpolate.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\exceptions.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\gettext.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\gettext\helpers.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\gettext\po_parser.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\locale.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\locale\fallbacks.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\locale\tag.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\locale\tag\parents.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\locale\tag\rfc4646.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\locale\tag\simple.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.4.1\i18n\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\base.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\cache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\cascade.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\chain.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\fallbacks.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\flatten.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\gettext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\interpolation_compiler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\key_value.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\memoize.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\metadata.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\pluralization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\backend\transliterator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\config.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\core_ext\hash.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\core_ext\kernel\surpress_warnings.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\core_ext\string\interpolate.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\exceptions.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\gettext.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\gettext\helpers.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\gettext\po_parser.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\interpolate\ruby.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\locale.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\locale\fallbacks.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\locale\tag.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\locale\tag\parents.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\locale\tag\rfc4646.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\locale\tag\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\basics.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\defaults.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\interpolation.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\link.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\localization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\localization\date.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\localization\date_time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\localization\procs.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\localization\time.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\lookup.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\pluralization.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\tests\procs.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\i18n-0.6.1\i18n\version.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\memcache-client-1.7.4\memcache.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\tzinfo-0.3.12\tzinfo.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\activesupport-2.3.14\lib\active_support\vendor\tzinfo-0.3.12\tzinfo\data_timezone.rb" />
