Removed (obsolete) test project

--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -198,6 +198,7 @@
     <None Include="Lists\IronLogs\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{8d33b9b0-7a01-4eb4-93be-57e5ae318020}</SharePointProjectItemId>
     </None>
+    <None Include="packages.config" />
     <None Include="Package\Package.package">
       <PackageId>{aacb7026-8941-4faa-b4bb-04562e317e53}</PackageId>
     </None>
