--- a/src/IronSharePoint.Framework/IronSharePoint.Framework.csproj
+++ b/src/IronSharePoint.Framework/IronSharePoint.Framework.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Diagnostics\IronDiagnosticService.cs" />
     <Compile Include="Hives\OrderedHiveList.cs" />
     <Compile Include="Hives\PhysicalHive.cs" />
+    <Compile Include="Hives\SPDocumentHive.cs" />
     <Compile Include="IHive.cs" />
     <Compile Include="IronConsole\Hooks\IIronConsoleHook.cs" />
     <Compile Include="IronConsole\Hooks\IronConsoleHookBase.cs" />
